tests/neg/semantic_math_sqrt_bad_type.baa
// EXPECT: نوع المعامل 1 في 'جذر_تربيعي' غير متوافق

صحيح الرئيسية() {
    عشري ن = جذر_تربيعي("٩").
    إرجع ٠.
}
